--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	],
 	"scripts": {
 		"test": "jest",
-		"build": "webpack",
+		"build": "webpack --mode production",
 		"watch": "webpack --watch --progress --mode development",
 		"prepare": "npm run build"
 	},
