--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@babel/preset-env": "^7.16.0",
 		"babel-jest": "^27.3.1",
 		"babel-loader": "^8.2.3",
+		"css-loader": "^6.7.2",
+		"style-loader": "^3.3.1",
 		"webpack": "^5.62.1",
 		"webpack-cli": "^4.9.1"
 	}
