--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name": "builderall-error-pages",
-	"version": "0.0.2",
-	"private": false,
-	"description": "",
-	"homepage": "",
-	"author": "mauricio-testa",
-	"license": "MIT",
-	"main": "dist/main.js",
-	"files": [
-		"dist/*",
-		"src/*"
-	],
-	"scripts": {
-		"test": "jest",
-		"build": "webpack --mode production",
-		"watch": "webpack --watch --progress --mode development",
-		"prepare": "npm run build"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.16.0",
-		"@babel/preset-env": "^7.16.0",
-		"babel-jest": "^27.3.1",
-		"babel-loader": "^8.2.3",
-		"css-loader": "^6.7.2",
-		"style-loader": "^3.3.1",
-		"webpack": "^5.62.1",
-		"webpack-cli": "^4.9.1"
-	}
+  "name": "builderall-error-pages",
+  "version": "0.0.2",
+  "private": false,
+  "description": "Builderall Error Pages Web Component",
+  "homepage": "https://github.com/mauricio-testa/builderall-error-pages",
+  "author": "mauricio-testa",
+  "license": "MIT",
+  "main": "dist/main.js",
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
+  "scripts": {
+    "test": "jest",
+    "build": "webpack --mode production",
+    "watch": "webpack --watch --progress --mode development",
+    "prepare": "npm run build"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "babel-jest": "^27.3.1",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.7.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1"
+  }
 }
